# RD3304

./: .gitignore  LICENSE
sources/: CMakeLists.txt  RD3303.uvmpw  RD3304.uvmpw  RD3304.uvmpw.uvgui.Sasha  Описание.txt
sources/Loader/: Loader799.uvoptx  Loader799.uvprojx
sources/Loader-799/: CMakeLists.txt  Loader-799.uvguix.Sasha  Loader-799.uvoptx  Loader-799.uvprojx
sources/Loader-799/src/: Update.h  Utils.cpp  Utils.h  booter_aes.cpp  booter_aes.h  config.h  fmw.cpp  fmw.h  main.cpp
sources/Loader-799/src/Hardware/CMSIS/: startup_gd32e23x.s
sources/Loader-799/src/Hardware/HAL/: HAL.cpp  HAL.h  HAL_PINS.h  HAL_SPI.cpp  gd32e23x_libopt.h
sources/Loader-799/src/rd/: Card.cpp  Card.h  CardUid.h  iso14443p3.h  iso14443p4.cpp  iso14443p4.h
sources/Loader-799/src/rd/CLRC663/: hrd_CLRC663.cpp
sources/Loader-799/src/rd/CR95LF/: hrd_CR95LF.h
sources/Loader/src/: Update.cpp  booter_crc.cpp  config.h
sources/Loader/src/Hardware/: hrd_Iap.cpp  hrd_Iap.h
sources/Loader/src/Hardware/CMSIS/: startup_gd32e23x.s
sources/Loader/src/Hardware/HAL/: HAL_PINS.cpp
sources/Loader/src/rd/: hrd_SPI.h  iso14443p3.cpp
sources/Loader/src/rd/CLRC663/: hrd_CLRC663.h
sources/Loader/src/rd/CR95LF/: hrd_CR95LF.cpp
sources/Milfare/: CMakeLists.txt  Mifare.uvguix.Sasha  Mifare.uvoptx  Mifare.uvprojx  readme.txt.txt
sources/Milfare/src/: defines.cpp  main.cpp  main.h  system.h
sources/Milfare/src/Device/: Device.cpp
sources/Milfare/src/Hardware/: Power.cpp  Timer.cpp
sources/Milfare/src/Hardware/CMSIS/: startup_stm32f103xb.s  system_gd32e23x.c  system_stm32f1xx.c
sources/Milfare/src/Hardware/HAL/: HAL.h  HAL_FLASH.cpp  HAL_ROM.cpp
sources/Milfare/src/Hardware/HAL/GD/: HAL_I2S.cpp  HAL_IT_gd.cpp  HAL_PINS_gd.cpp  HAL_ROM_gd.cpp  HAL_SPI_gd.cpp  HAL_gd.cpp
sources/Milfare/src/Hardware/HAL/STM/: HAL_I2C_stm.cpp  HAL_IT_stm.cpp  HAL_PINS_stm.cpp  HAL_SPI_stm.cpp  HAL_stm.cpp  stm32f1xx_hal_conf.h
sources/Milfare/src/MFRC630/: mfrc630.cpp  mfrc630.h  mfrc630_14443p4.cpp  mfrc630_apdu.cpp
sources/Milfare/src/Modules/CLRC66303HN/: CLRC66303HN.cpp  CLRC66303HN.h  CLRC66303_def.h  CommandsCLRC663.cpp  CommandsCLRC663.h
sources/Milfare/src/Modules/CLRC66303HN/_old/: Password.cpp
sources/Milfare/src/Modules/Indicator/: Indicator.cpp  Indicator.h  IndicatorTask.cpp
sources/Milfare/src/Modules/Indicator/LP5012/: LP5012.cpp
sources/Milfare/src/Modules/Indicator/WS2812B/: WS2812B.cpp  WS2812B.cpp.rej
sources/Milfare/src/Modules/LIS2DH12/: LIS2DH12.cpp
sources/Milfare/src/Modules/Memory/: Memory.cpp  Memory.h
sources/Milfare/src/Modules/Player/GD/: Player_gd.cpp
sources/Milfare/src/Modules/Player/STM/: Player_stm.cpp  Sounds_stm.cpp
sources/Milfare/src/Modules/Sensor/: TTP223.h
sources/Milfare/src/Nodes/: Communicator.h  Upgrader.h
sources/Milfare/src/Reader/: Card.h  Events.cpp  Messages.h  Reader.cpp  Signals.cpp  Signals.h
sources/Milfare/src/Reader/Task/: Task.cpp  Task.h
sources/Milfare/src/Settings/: AccessCards.cpp
sources/Milfare/src/Utils/: Buffer.h  Debug.cpp  FiltrMiddleOf3.h  Log.cpp  Log.h  RingBuffer.cpp  RingBuffer.h  String.h
sources/Milfare/src/_Archiv/PlayerSoft/: PlayerSoft.cpp
sources/Reader/: 6-Reader-Debug.sct  6-Reader.sct  Reader-771.uvguix.Sasha  Reader-771.uvoptx  Reader-771.uvprojx  Reader-777.uvguix.Sasha  Reader-777.uvoptx  Reader-777.uvprojx  Reader-799.uvguix.Sasha  Reader-799.uvoptx  Reader-799.uvprojx  Reader-GD.uvoptx  Reader-GD.uvprojx  Reader.uvoptx  Reader.uvprojx  readme.txt
sources/Reader/doc/: Карты.txt  Команды SCPI.txt
sources/Reader/src/: defines.h  opt.h
sources/Reader/src/Device/: Device.cpp  Device.h  DeviceInfo.cpp  DeviceStartState.cpp
sources/Reader/src/Hardware/: Power.cpp  Power.h  Timer.cpp  Timer.h
sources/Reader/src/Hardware/CMSIS/: startup_gd32e23x.s
sources/Reader/src/Hardware/HAL/: HAL.h  HAL_PINS.h  HAL_ROM.cpp  HAL_USART.cpp
sources/Reader/src/Modules/CLRC66303HN/: CLRC66303HN.cpp  CLRC66303_def.h  CommandsCLRC663.cpp  CommandsCLRC663.h  RegistersCLRC663.cpp  RegistersCLRC663.h
sources/Reader/src/Modules/Indicator/: ColorLED.h  Indicator.cpp
sources/Reader/src/Modules/LIS2DH12/: LIS2DH12.cpp  LIS2DH12.h  LIS2DH12_reg.h
sources/Reader/src/Modules/Memory/: Memory.cpp  Memory.h
sources/Reader/src/Modules/Player/: BeeperTask.cpp  Player.h  TableSounds.h
sources/Reader/src/Modules/PlayerSoft/: PlayerSoft.cpp  PlayerSoft.h
sources/Reader/src/Modules/Sensor/: TTP223.cpp
sources/Reader/src/Nodes/: Communicator.cpp  Communicator.h  Upgrader.cpp
sources/Reader/src/Nodes/OSDP/: AnswersOSDP.cpp  AnswersOSDP.h  OSDP.cpp  OSDP.h
sources/Reader/src/Reader/: Card.cpp  Card.h  Events.cpp  Events.h  Messages.cpp  Reader.cpp  Reader.h  Signals.cpp
sources/Reader/src/Reader/Task/: MakeMaster.cpp  MakeUser.cpp  Task.h
sources/Reader/src/Settings/: AccessCards.cpp  AccessCards.h  Settings.cpp  Settings.h  SettingsTypes.h
sources/Reader/src/Utils/: Averager.h  Debug.h  Log.cpp  Log.h  Math.cpp  Math.h  Mutex.h  String.cpp  StringUtils.cpp  StringUtils.h
sources/Reader/src/_Archiv/PlayerSoft/: PlayerSoft.h
sources/Reader/vs_keil771/: CMakeLists.txt
sources/Reader/vs_keil777/: CMakeLists.txt
sources/Reader/vs_keil799/: CMakeLists.txt
sources/common/GD32E23x_Firmware_Library/: version.txt
sources/common/GD32E23x_Firmware_Library/Template/: gd32e23x_it.c  main.c
sources/common/GD32E23x_Firmware_Library/Template/IAR_project/: Project.ewp
sources/common/_VS_GUI/: stm32f1xx_hal.cpp  stm32f1xx_hal.h
sources/common/_VS_KEIL/CMSIS/: core_cm23.h  core_cm3.h
sources/common/_VS_KEIL/std_includes/: climits  cmath  cstdarg  cstdio  cstdlib  cstring  ctype.h  stdlib.h
sources/common/_VS_LIBS/STM32F1/: stm32f1xx_hal.cpp  stm32f1xx_hal_gpio.cpp  stm32f1xx_hal_i2c.cpp  stm32f1xx_hal_pcd.cpp  stm32f1xx_hal_rcc.cpp  stm32f1xx_hal_spi.cpp  stm32f1xx_hal_uart.cpp
sources/common/_VS_LIBS/USBD/: usbd_cdc.cpp  usbd_core.cpp  usbd_ctlreq.cpp
sources/doc/: Карты.txt  Команды SCPI.txt  Описание.txt
sources/scripts/Keil/: edit.bat
sources/scripts/vs_keil/: assembly.bat  edit.bat
(+363 files in other folders)
